<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udacity.abng.capitalsquizzapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/q1"
                style="@style/questonstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:text="@string/q1_text" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/q1a"
                    style="@style/answerstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1a_switzerland" />

                <RadioButton
                    android:id="@+id/q1b"
                    style="@style/answerstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1b_hungary" />

                <RadioButton
                    android:id="@+id/q1c"
                    style="@style/answerstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1c_austria" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/q2"
                style="@style/questonstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_text" />

            <CheckBox
                android:id="@+id/q2a"
                style="@style/answerstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a_capital" />

            <CheckBox
                android:id="@+id/q2b"
                style="@style/answerstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2b_country" />

            <CheckBox
                android:id="@+id/q2c"
                style="@style/answerstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2c_wine" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/q3"
                style="@style/questonstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3text" />

            <EditText
                android:id="@+id/q3a"
                style="@style/edittextstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/q4"
                style="@style/questonstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4text" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/q4a"
                    style="@style/answerstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4a_spain" />

                <RadioButton
                    android:id="@+id/q4b"
                    style="@style/answerstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4b_portugal" />

                <RadioButton
                    android:id="@+id/q4c"
                    style="@style/answerstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4c_dominica" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/q5"
                style="@style/questonstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5text" />

            <CheckBox
                android:id="@+id/q5a"
                style="@style/answerstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5a_united_states_of_america" />

            <CheckBox
                android:id="@+id/q5b"
                style="@style/answerstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5b_south_africa" />

            <CheckBox
                android:id="@+id/q5c"
                style="@style/answerstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5c_bolivia" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/q6"
                style="@style/questonstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6text" />

            <EditText
                android:id="@+id/q6a"
                style="@style/edittextstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:onClick="calcResult"
            android:text="@string/Button" />

    </LinearLayout>
</ScrollView>